objects/George_Pig__c.object
<CustomObject>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dino_roar__c</fullName>
        <label>Dino roar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dinosaurio__c</fullName>
        <label>Dinosaurio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>George Pig</label>
    <nameField>
        <label>George Pig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>George Pig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>